objects/Incident__c.object
<CustomObject>
    <description>Object to be used to record health and behavioural issues, damage to property/equipment and details of those who quit the programme.</description>
    <fields>
        <fullName>APM_Email__c</fullName>
        <label>APM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this incident took place at a partner or venue, please record the Account.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Add_New_Notes_Long__c</fullName>
        <description>Takes place of &quot;Add new notes&quot; field, as allows for 2000 characters to be entered, rather than 250.</description>
        <inlineHelpText>&quot;Please add notes here that record important events regarding the management of this incident after it occurred (i.e. key people spoken to, decisions made, referrals made).
The date, time and your user name will be automatically recorded.&quot;</inlineHelpText>
        <label>Add New Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Add_new_notes__c</fullName>
        <inlineHelpText>&quot;Please add notes here that record important events regarding the management of this incident after it occurred (i.e. key people spoken to, decisions made, referrals made).
The date, time and your user name will be automatically recorded.&quot;</inlineHelpText>
        <label>Add new notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Advice_given_to_PAM_PM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advice given to PAM / PM?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advice_given_to_wave_staff_by_phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advice given to wave staff by phone?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_Reserved_on_Different_Wave__c</fullName>
        <formula>IF( OR( Wave__c = Contact__r.Assigned_Wave__r.Name , Wave__c = Contact__r.Reserved_Wave__r.Name), &quot;No&quot;, &quot;Yes&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned/Reserved on Different Wave</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendance__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Attendance</label>
        <referenceTo>Attendance__c</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Card_type__c</fullName>
        <label>Card type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red (2nd yellow awarded)</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_notes__c</fullName>
        <label>Case notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cause_of_incident__c</fullName>
        <inlineHelpText>Enter as many items as you feel apply.</inlineHelpText>
        <label>Cause of incident</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alcohol or drugs</fullName>
                </value>
                <value>
                    <fullName>Drowing/suffocation</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Equipment failure</fullName>
                </value>
                <value>
                    <fullName>Exhaustion</fullName>
                </value>
                <value>
                    <fullName>Exposure to fire or explosion</fullName>
                </value>
                <value>
                    <fullName>Exposure to harmful substance</fullName>
                </value>
                <value>
                    <fullName>Falls from height</fullName>
                </value>
                <value>
                    <fullName>Injured while handling/lifting/carrying</fullName>
                </value>
                <value>
                    <fullName>Missing/lost</fullName>
                </value>
                <value>
                    <fullName>Pre-existing condition</fullName>
                </value>
                <value>
                    <fullName>Slips, trips or falls on same level</fullName>
                </value>
                <value>
                    <fullName>Struck by moving object or vehicle</fullName>
                </value>
                <value>
                    <fullName>Struck something fixed/stationary</fullName>
                </value>
                <value>
                    <fullName>Vehicle</fullName>
                </value>
                <value>
                    <fullName>Self Harm</fullName>
                </value>
                <value>
                    <fullName>Illness</fullName>
                </value>
                <value>
                    <fullName>Food Poisoning</fullName>
                </value>
                <value>
                    <fullName>Fight/Altercation</fullName>
                </value>
                <value>
                    <fullName>Involved in vehicle collision</fullName>
                </value>
                <value>
                    <fullName>Allergic Reaction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <formula>Wave__r.Wave_Cluster__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Team__c</fullName>
        <formula>Contact__r.Team__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use the spyglass to look up the name of the young person.</inlineHelpText>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>YP2014, Summer staff, Young Person</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dangerous_accident__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dangerous accident?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DateTime_Alert_Sent_to_PM__c</fullName>
        <label>DateTime Alert Sent to PM</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTime_Alert_Sent_to_SPM__c</fullName>
        <label>DateTime Alert Sent to SPM</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTime_Reminder_Sent_to_SPM__c</fullName>
        <label>DateTime Reminder Sent to SPM</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Reported_to_PHAROS__c</fullName>
        <label>Date Reported to PHAROS</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Reported_to_RIDDOR__c</fullName>
        <label>Date Reported to RIDDOR</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Reported_to_The_Charity_Commission__c</fullName>
        <label>Date Reported to The Charity Commission</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_and_time_incident_reported_to_PL__c</fullName>
        <inlineHelpText>If the PL was informed, please enter the time and date.</inlineHelpText>
        <label>Date and time incident reported to PL</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_and_time_incident_reported_to_PM__c</fullName>
        <inlineHelpText>A core staff member should always be informed of an incident. Please record the date/time here.</inlineHelpText>
        <label>Date reported to core staff member</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_and_time_of_incident__c</fullName>
        <inlineHelpText>When the incident actually ocurred.</inlineHelpText>
        <label>Date and time of incident</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_card_was_given__c</fullName>
        <label>Date card was given</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_left_the_programme__c</fullName>
        <inlineHelpText>This is the date that the YP left the programme.</inlineHelpText>
        <label>Date left the programme</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_incident__c</fullName>
        <label>Date of incident</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_that_PL_was_informed__c</fullName>
        <label>Date that PL was informed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_that_PM_was_informed__c</fullName>
        <label>Date that PM was informed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_as_a_number__c</fullName>
        <description>If a red card has been awarded, this field converts the day selected within the field &apos;Day that card was given/YP left&apos; into a number (ie PC1 = 1, PC2 = 2, ... , RCA4 = 19).</description>
        <formula>IF ( OR (Red_card_awarded__c = TRUE,  ISNULL( Date_left_the_programme__c ) = FALSE ), IF (  ISPICKVAL ( Day_that_card_was_given__c , &quot;PC 1&quot;), 1, IF (  ISPICKVAL (  Day_that_card_was_given__c , &quot;PC 2&quot;), 2, IF (  ISPICKVAL ( Day_that_card_was_given__c , &quot;PC 3&quot;), 3, IF (  ISPICKVAL ( Day_that_card_was_given__c , &quot;PC 4&quot;), 4, IF (  ISPICKVAL ( Day_that_card_was_given__c , &quot;PC 5&quot;), 5, IF (  ISPICKVAL ( Day_that_card_was_given__c , &quot;PC 6&quot;), 6, IF (  ISPICKVAL ( Day_that_card_was_given__c , &quot;TC 1&quot;), 6, IF (  ISPICKVAL ( Day_that_card_was_given__c , &quot;TC 2&quot;), 7, IF (  ISPICKVAL ( Day_that_card_was_given__c , &quot;TC 3&quot;), 8, IF (  ISPICKVAL ( Day_that_card_was_given__c , &quot;TC 4&quot;), 9, IF (  ISPICKVAL ( Day_that_card_was_given__c , &quot;TC 5&quot;), 10, IF (  ISPICKVAL ( Day_that_card_was_given__c , &quot;RCD 1&quot;), 11, IF (  ISPICKVAL ( Day_that_card_was_given__c , &quot;RCD 2&quot;), 12, IF (  ISPICKVAL ( Day_that_card_was_given__c , &quot;RCD 3&quot;), 13, IF (  ISPICKVAL ( Day_that_card_was_given__c , &quot;RCD 4&quot;), 14, IF (  ISPICKVAL ( Day_that_card_was_given__c , &quot;RCA 1&quot;), 15, IF (  ISPICKVAL ( Day_that_card_was_given__c , &quot;RCA 2&quot;), 16, IF (  ISPICKVAL ( Day_that_card_was_given__c , &quot;RCA 3&quot;), 17, IF (  ISPICKVAL ( Day_that_card_was_given__c , &quot;RCA 4&quot;), 18,0))))))))))))))))))), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day as a number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day_that_card_was_given__c</fullName>
        <inlineHelpText>For &apos;started but left&apos; YPs, this is the date that they quit the programme. If this is different from the day they actually went home, enter this information in the fields below.</inlineHelpText>
        <label>Day that action was taken/YP left</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PC 1</fullName>
                </value>
                <value>
                    <fullName>PC 2</fullName>
                </value>
                <value>
                    <fullName>PC 3</fullName>
                </value>
                <value>
                    <fullName>PC 4</fullName>
                </value>
                <value>
                    <fullName>PC 5</fullName>
                </value>
                <value>
                    <fullName>PC 6</fullName>
                </value>
                <value>
                    <fullName>TC 1</fullName>
                </value>
                <value>
                    <fullName>TC 2</fullName>
                </value>
                <value>
                    <fullName>TC 3</fullName>
                </value>
                <value>
                    <fullName>TC 4</fullName>
                </value>
                <value>
                    <fullName>TC 5</fullName>
                </value>
                <value>
                    <fullName>RCD 1</fullName>
                </value>
                <value>
                    <fullName>RCD 2</fullName>
                </value>
                <value>
                    <fullName>RCD 3</fullName>
                </value>
                <value>
                    <fullName>RCD 4</fullName>
                </value>
                <value>
                    <fullName>RCA 1</fullName>
                </value>
                <value>
                    <fullName>RCA 2</fullName>
                </value>
                <value>
                    <fullName>RCA 3</fullName>
                </value>
                <value>
                    <fullName>RCA 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description_of_incident__c</fullName>
        <inlineHelpText>&quot;Describe the incident:
- What happened?
- Any damage to property?
- Was any treatment given?
- Any significant evidence including photographs to be retained?
- Anything else that needs to be recorded?&apos;&quot;</inlineHelpText>
        <label>Description of incident</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Did_YP_leave_the_programme_the_same_day__c</fullName>
        <inlineHelpText>Was the YP&apos;s departure date the same as the day they quit/were awarded the red card?</inlineHelpText>
        <label>Did YP leave the programme the same day?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_URL_2__c</fullName>
        <label>Document URL 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Document_URL_3__c</fullName>
        <label>Document URL 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Document_URL__c</fullName>
        <inlineHelpText>Please enter the Salesforce link of the document that has been uploaded.</inlineHelpText>
        <label>Document URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Document_Uploaded_By__c</fullName>
        <label>Document Uploaded By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_deleted_elsewhere__c</fullName>
        <label>Document deleted elsewhere?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/a</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_injury_occurred_has_PM_contacted_PG__c</fullName>
        <label>If injury occurred, has PM contacted PG?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_not_what_was_their_departure_day__c</fullName>
        <inlineHelpText>Input the day that the YP departed from the programme if it&apos;s not the same day they were awarded the red card/quit.</inlineHelpText>
        <label>If not, what was their departure day?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>If_other_what_was_lost__c</fullName>
        <label>If other, what was lost</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Incident_notes__c</fullName>
        <inlineHelpText>Use this field for any additional information that you feel is important.</inlineHelpText>
        <label>Incident notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Notes__c</fullName>
        <description>This is a field for the legal team to make any notes based on their analysis. Only to be seen and edited by legal</description>
        <label>Legal Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legal_close_case__c</fullName>
        <label>Legal - close case</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MHA_Actions_completed__c</fullName>
        <label>MHA: Actions completed ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MHA_spoken_to_parent_guardian__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MHA spoken to parent / guardian</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mental_Health__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please tick this box if this incident refers to a mental health support need. You may also need to tick the Safeguarding and disclosure box if a there was also a safeguarding disclosure</inlineHelpText>
        <label>Mental Health ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Met_with_young_person__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Met with young person?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_of_Delivery_Staff_who_reported_this__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter your own name or that of the person who reported the incident to you.</inlineHelpText>
        <label>Name of Delivery Staff who reported this</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Summer staff</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Incidents (Name of Delivery Staff who reported this)</relationshipLabel>
        <relationshipName>Incidents_reported</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_of_person_reporting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter your own name or that of the person who reported the incident to you.</inlineHelpText>
        <label>Name of Delivery Staff who reported this</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Summer staff</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_of_person_who_lost_information__c</fullName>
        <label>Name of person who lost information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_person_who_recorded_this__c</fullName>
        <label>Name of person who recorded this</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Names_of_organisation_s_referred_to__c</fullName>
        <label>Names of organisation(s) referred to</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Names_of_witnesses__c</fullName>
        <inlineHelpText>People present but not directly impacted</inlineHelpText>
        <label>Names of witnesses</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nature_of_any_injury__c</fullName>
        <inlineHelpText>Describe injury and name of injured.
Provide more detail of the injury sustained and any treatment provided.</inlineHelpText>
        <label>Nature of any injury</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nature_of_incident__c</fullName>
        <label>Nature of incident</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Damage to person</fullName>
                </value>
                <value>
                    <fullName>Damage to property</fullName>
                </value>
                <value>
                    <fullName>Illness</fullName>
                </value>
                <value>
                    <fullName>Near miss</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_action_taken__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No action taken</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_individuals_involved__c</fullName>
        <label>Other individuals involved</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PA_PM_Case_closed__c</fullName>
        <label>PAM/PM: Case closed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PA_PM_Notes__c</fullName>
        <label>PA/PM Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PM_Check__c</fullName>
        <formula>Wave__r.PM_Check__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Programmes User View</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PM_Email__c</fullName>
        <label>PM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Period_of_programme__c</fullName>
        <description>Manual picklist field. Not used on Started but Left or Behaviour layouts (&apos;Section of the programme&apos; - formula field - used instead).</description>
        <label>Section of the programme?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PC</fullName>
                </value>
                <value>
                    <fullName>TC</fullName>
                </value>
                <value>
                    <fullName>RCD</fullName>
                </value>
                <value>
                    <fullName>RCA</fullName>
                </value>
                <value>
                    <fullName>TCS</fullName>
                </value>
                <value>
                    <fullName>Graduation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Precise_location_of_incident__c</fullName>
        <inlineHelpText>Give details of the location</inlineHelpText>
        <label>Location of incident</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_warning_details__c</fullName>
        <label>Prior warning details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Card__c</fullName>
        <description>Field to describe why the card was given</description>
        <inlineHelpText>Describe why the card was given</inlineHelpText>
        <label>Reason for reporting</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_leaving__c</fullName>
        <description>Field used when a YP chooses to leave the programme. Record the reason and details in this field.</description>
        <inlineHelpText>Enter the Reasons for leaving and any further details.</inlineHelpText>
        <label>Reason for leaving</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Red_card_awarded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Red card awarded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reported_to_PHAROS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Incident has been reported to PHAROS</description>
        <label>Reported to PHAROS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reported_to_RIDDOR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Incident has been reported to RIDDOR</description>
        <label>Reported to RIDDOR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reported_to_The_Charity_Commission__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Incident has been reported to PHAROS</description>
        <label>Reported to The Charity Commission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resources_given__c</fullName>
        <label>Resources given</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resources_given_for_self_help_strategies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resources given for self help strategies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Result_of_red_Card__c</fullName>
        <description>Field to be filled in at time of Red Card.  PM should make the call of the 3 options.

SF workflow needs to be added, this should enable this field to interact with the Contact page.</description>
        <inlineHelpText>Field to be filled in at time of Red Card.  PM should make the call of the 3 options.</inlineHelpText>
        <label>Result of red Card</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Can still take part in TCS</fullName>
                </value>
                <value>
                    <fullName>Can only taken part in TCS if they have a personal Coach</fullName>
                </value>
                <value>
                    <fullName>Can not take any further role in TCS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>SPM</fullName>
                </value>
                <value>
                    <fullName>LO</fullName>
                </value>
                <value>
                    <fullName>RAM</fullName>
                </value>
                <value>
                    <fullName>EO</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>PL</fullName>
                </value>
                <value>
                    <fullName>Summer Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SPM_Email__c</fullName>
        <label>SPM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SPM_Notes__c</fullName>
        <label>SPM Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Safeguarding_and_Disclosure__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please tick this box if this incident is a safeguarding disclosure. You may also need to tick the Mental Health box if a mental health support need was disclosed</inlineHelpText>
        <label>Safeguarding and Disclosure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section_of_the_programme__c</fullName>
        <description>Used only on Started but Left and Behaviour layouts - &apos;Which section of the programme?&apos; is used on others (this is a manual picklist field)</description>
        <formula>IF ( OR( ISPICKVAL ( Day_that_card_was_given__c, &quot;PC 1&quot;), ISPICKVAL ( Day_that_card_was_given__c, &quot;PC 2&quot;), ISPICKVAL ( Day_that_card_was_given__c, &quot;PC 3&quot;), ISPICKVAL ( Day_that_card_was_given__c, &quot;PC 4&quot;), ISPICKVAL ( Day_that_card_was_given__c, &quot;PC 5&quot;), ISPICKVAL ( Day_that_card_was_given__c, &quot;PC 6&quot;)), &quot;PC&quot;, IF (OR( ISPICKVAL ( Day_that_card_was_given__c, &quot;TC 1&quot;), ISPICKVAL ( Day_that_card_was_given__c, &quot;TC 2&quot;), ISPICKVAL ( Day_that_card_was_given__c, &quot;TC 3&quot;), ISPICKVAL ( Day_that_card_was_given__c, &quot;TC 4&quot;), ISPICKVAL ( Day_that_card_was_given__c, &quot;TC 5&quot;)), &quot;TC&quot;, IF (OR( ISPICKVAL ( Day_that_card_was_given__c, &quot;RCD 1&quot;), ISPICKVAL ( Day_that_card_was_given__c, &quot;RCD 2&quot;), ISPICKVAL ( Day_that_card_was_given__c, &quot;RCD 3&quot;), ISPICKVAL ( Day_that_card_was_given__c, &quot;RCD 4&quot;)), &quot;RCD&quot;, IF (OR( ISPICKVAL ( Day_that_card_was_given__c, &quot;RCA 1&quot;), ISPICKVAL ( Day_that_card_was_given__c, &quot;RCA 2&quot;), ISPICKVAL ( Day_that_card_was_given__c, &quot;RCA 3&quot;), ISPICKVAL ( Day_that_card_was_given__c, &quot;RCA 4&quot;)), &quot;RCA&quot;, NULL))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Section of the programme</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity_of_Injury__c</fullName>
        <inlineHelpText>Use your judgement: As a guide 1=very minor eg. graze, 5= emergency eg hospital visit for collapse</inlineHelpText>
        <label>Severity of Injury</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fatal</fullName>
                </value>
                <value>
                    <fullName>Major (anything reportable to RIDDOR – see classification below)</fullName>
                </value>
                <value>
                    <fullName>Resulting in a staff member unable to work for 3 consecutive days</fullName>
                </value>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>Major (Person sent to Hospital)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>